--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
